--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "cypress": "^13.10.0"
+  },
+  "devDependencies": {
+    "cypress-mochawesome-reporter": "^3.8.2",
+    "mocha": "^10.4.0"
   }
 }
